--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,10 @@
     "babel-core": "^6.26.3",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "morgan": "^1.9.1",
+    "jsonwebtoken": "^8.5.1",
+    "log4js": "^4.3.1",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.2.0"
