--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "apidoc": "apidoc -i routes/ -o apidoc/ -c config"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
