--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,6 @@
   "description": "Build equipment management application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "apidoc": "apidoc -i routes/ -o apidoc/ -c config"
   },
@@ -35,6 +34,7 @@
     "log4js": "^4.3.1",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^5.2.0"
+    "sequelize": "^5.2.0",
+    "sequelize-cli": "^5.4.0"
   }
 }
